Add back debug options to demos